# stanmetacols

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: formulation.md
docs/superpowers/plans/: 2026-06-21-stanmetacols.md  2026-06-21-stansample.md
docs/superpowers/specs/: 2026-06-21-stanmetacols-design.md  2026-06-24-shared-llm-client-design.md
src/stanmetacols/: __init__.py  __main__.py  heuristic.py  llm.py  prompts.py  rank.py  roles.py  schema.py
src/stansample/: __init__.py  __main__.py  heuristic.py  llm.py  profile.py  prompts.py  rank.py  schema.py
tests/: test_cli.py  test_heuristic.py  test_llm.py  test_profile.py  test_profile_barcode.py  test_profile_composite.py  test_prompts.py  test_public_api.py  test_rank.py  test_roles.py  test_schema.py
