[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stansample"
version = "0.1.0"
description = "Rank which AnnData .obs column identifies the sample each cell came from"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "chansigit"}]
keywords = ["single-cell", "scRNA-seq", "anndata", "metadata", "sample"]
dependencies = ["pandas>=1.5", "numpy>=1.22", "pydantic>=2"]

[project.optional-dependencies]
anndata = ["anndata>=0.8"]
llm = ["anthropic>=0.69"]
test = ["pytest>=7.0", "anndata>=0.8", "anthropic>=0.69"]

[project.scripts]
stansample = "stansample.__main__:main"

[project.urls]
Homepage = "https://github.com/chansigit/stansample"
Repository = "https://github.com/chansigit/stansample"

[tool.hatch.build.targets.wheel]
packages = ["src/stansample"]

[tool.pytest.ini_options]
testpaths = ["tests"]
